@@ -2,6 +2,10 @@
 
 * Changelog
 
+** Next
+
+- Added support for =mode-line= and =doom-modeline=.
+
 ** 0.3.2
 
 - Changed =soria-theme-purple-identifiers= so it's interactive. See [[https://github.com/mssola/soria/commit/ababa4f383fc038a3b03babb99e7dbbc4f1aa3aa][ababa4f383fc]].
